--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
 .map-responsive iframe{
     left:0;
     top:0;
-    max-height:100%;
-    width:100%;
+    height:100%;
+    max-width:100%;
     position:absolute;
 }
