--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
 .map-responsive iframe{
     left:0;
     top:0;
-   /* height:95%; */
-   /* width:95%; */
+    height:95%;
+    width:95%;
     position:absolute;
 }
